Fixed Google maps view and images

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" href="../icon.png" sizes="40x40" type="image/png">
-	<meta name="author" content="Magnus Fernandes">
-	<meta name="description" content="Ilha do Sol Divar Goa.">
+	<meta name="description" content="Coastline Estates Goa present you Ilha do Sol, the perfect island homes at the perfect destination at Divar, Goa.">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Ilhadosol</title>
+	<title>Ilha do Sol</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -26,59 +25,58 @@
 		</header>
 		<section class="pictures">
 			<div class="pic">
-				<img src="images/1.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/1.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="images/2.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/2.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="http://ankbeats.com/About/images/3.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/3.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="http://ankbeats.com/About/images/4.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/4.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="http://ankbeats.com/About/images/5.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/5.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="http://ankbeats.com/About/images/6.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/6.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="http://ankbeats.com/About/images/7.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/7.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="http://ankbeats.com/About/images/8.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/8.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="http://ankbeats.com/About/images/9.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/9.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="http://ankbeats.com/About/images/10.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/10.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="http://ankbeats.com/About/images/11.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/11.JPG" class="img-responsive" alt="Gallery">
 			</div>
 			<div class="pic">
-				<img src="http://ankbeats.com/About/images/12.jpg" class="img-responsive" alt="Gallery">
+				<img src="images/12.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/13.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/14.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/15.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/16.JPG" class="img-responsive" alt="Gallery">
 			</div>
 		</section>
 		<footer class="footer">
-			<h4>Powered by <a href="http://www.amberzile.com" target="_blank"><span>Amber<span>Zile</span></span></a></h4>
+			<h4>© 2020 Coastline Estates. All rights reserved.</h4>
 		</footer>
 	</div>
 	<script src="../js/lib/jquery.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js"></script>
-	<script>
-	  function initialize() {
-	    var mapCanvas = document.getElementById('map');
-	    var mapOptions = {
-	      center: new google.maps.LatLng(15.4776515,73.801693),
-	      zoom: 14,
-	      mapTypeId: google.maps.MapTypeId.ROADMAP
-	    }
-	    var map = new google.maps.Map(mapCanvas, mapOptions)
-	  }
-	  google.maps.event.addDomListener(window, 'load', initialize);
-	</script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
