--- a/Plan/index.html
+++ b/Plan/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" href="../icon.png" sizes="40x40" type="image/png">
-	<meta name="author" content="Magnus Fernandes">
-	<meta name="description" content="The official website of Aashna Kuncolienkar.">
+	<meta name="description" content="Coastline Estates Goa present you Ilha do Sol, the perfect island homes at the perfect destination at Divar, Goa.">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Ilhadosol</title>
+	<title>Ilha do Sol</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -30,23 +29,25 @@
 					<img src="../images/ground_floor.jpg" alt="">
 					<img src="../images/first_floor.jpg" alt="">
 				</div>
+				<div>
+					<br><h1>FLOOR PLANS</h1>
+					<h3>212 m²</h3><br>
+				</div>
 			</div>
 			<div class="right">
-				<h1>FLOOR PLANS</h1>
-				<h2>212 sq.mts.</h2>
-				<a href="images/plan.jpg" target="_blank"><span>DOWNLOAD</span></a>
+				<!-- <a href="images/plan.jpg" target="_blank"><span>DOWNLOAD</span></a> -->
 				<ul>
-					<li><span><h4>Spacious 3 BHK with modern interiors.</h4></span></li>
-					<li><span><h4>Comfortable living & dining.</h4></span></li>
-					<li><span><h4>Large balconies.</h4></span></li>
-					<li><span><h4>Green open spaces.</h4></span></li>
-					<li><span><h4>Open to sky terraces.</h4></span></li>
-					<li><span><h4>Car porch.</h4></span></li>
+					<li><span><h4>Spacious 3 BHK with modern interiors</h4></span></li>
+					<li><span><h4>Comfortable living & dining</h4></span></li>
+					<li><span><h4>Large balconies</h4></span></li>
+					<li><span><h4>Green open spaces</h4></span></li>
+					<li><span><h4>Open to sky terraces</h4></span></li>
+					<li><span><h4>Car porch</h4></span></li>
 				</ul>
 			</div>
 		</section>
 		<footer class="footer">
-			<h4>Powered by <a href="http://www.amberzile.com" target="_blank"><span>Amber<span>Zile</span></span></a></h4>
+			<h4>© 2020 Coastline Estates. All rights reserved.</h4>
 		</footer>
 	</div>
 	<script src="js/lib/jquery.min.js"></script>
