--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" href="icon.png" sizes="40x40" type="image/png">
-	<meta name="author" content="Magnus Fernandes, Amberzile">
 	<meta name="description" content="Coastline Estates Goa present you Ilha do Sol, the perfect island homes at the perfect destination at Divar, Goa.">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Ilhadosol</title>
+	<title>Ilha do Sol</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -45,7 +44,7 @@
 			</section>
 		</section>
 		<footer class="footer">
-			<h4>Powered by <a href="http://www.amberzile.com" target="_blank"><span>Amber<span>Zile</span></span></a></h4>
+			<h4>© 2020 Coastline Estates. All rights reserved.</h4>
 		</footer>
 	</div>
 	<script src="js/lib/jquery.min.js"></script>
