--- a/css/new.html
+++ b/css/new.html
@@ -3,10 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" href="icon.svg" sizes="16x16" type="image/svg">
-	<meta name="author" content="Magnus Fernandes">
-	<meta name="description" content="The official website of Aashna Kuncolienkar.">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Ilhadosol</title>
+	<title>Ilha do Sol</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
