Added additional images

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -72,6 +72,30 @@
 			<div class="pic">
 				<img src="images/16.JPG" class="img-responsive" alt="Gallery">
 			</div>
+			<div class="pic">
+				<img src="images/17.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/18.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/19.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/20.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/21.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/22.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/23.JPG" class="img-responsive" alt="Gallery">
+			</div>
+			<div class="pic">
+				<img src="images/24.JPG" class="img-responsive" alt="Gallery">
+			</div>
 		</section>
 		<footer class="footer">
 			<h4>© 2020 Coastline Estates. All rights reserved.</h4>
